--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "20211001_express-cors",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-		"dev": "nodemon index.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vstrelianyi/20211001_express-cors#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.13"
